--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="assets/styles/main.css">
+    <link rel="stylesheet" href="assets/styles/animations.css">
+
+      <script src="./assets/script/animations.js"></script>
 </head>
 <body>
     <header class="header">
@@ -41,7 +44,7 @@
         </div>
     </header>
     <section class="initial-section">
-        <div class="initial-section__content">
+        <div class="initial-section__content anim-down-top">
             <div class="initial-section__information">
                 <h1 class="initial-section__title">
                     Не знаешь <br> кем стать?
@@ -62,4 +65,5 @@
     </section>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 </body>
+
 </html>
