--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="assets/styles/main.css">
+    <link rel="stylesheet" href="assets/styles/animations.css">
+    <script async src="./assets/scripts/animations.js" ></script>
 </head>
 <body>
     <header class="header">
@@ -47,7 +49,7 @@
         </div>
         </div>
     </header>
-    <section class="initial-section">
+    <section class="initial-section anim-down-top">
         <div class="initial-section__content">
             <div class="initial-section__information">
                 <h1 class="initial-section__title">
