--- a/assets/connect/footer.html
+++ b/assets/connect/footer.html
@@ -50,7 +50,7 @@
             <h5 class="sub-footer__title">
                 Разработчик: <span class="sub-footer__name">Ulytau Team</span>
             </h5>
-            <a href="" class="sub-footer__confidentiality">
+            <a href="/confidentiality.php" class="sub-footer__confidentiality">
                 Политика конфиденциальности
             </a>
         </div>
