add animation for footer

--- a/assets/connect/footer.html
+++ b/assets/connect/footer.html
@@ -1,10 +1,19 @@
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="/assets/styles/main.css">
+    <link rel="stylesheet" href="/assets/styles/animations.css">
+    <script async src="/assets/scripts/animationText.js"></script>
+</head>
+
     <footer class="footer">
         <div class="footer__content">
             <div class="footer__infromation">
                 <h4 class="footer__title">
                     О нашем сайте:
                 </h4>
-                <p class="footer__description">
+                <p  class="footer__description">
                     Наш сайт предназначен для абитуриентов Улытауской области, которые ищут колледжи, соответствующие их способностям и интересам. Он помогает студентам подобрать подходящее учебное заведение.
                 </p>
             </div>
@@ -13,19 +22,19 @@
                     Наши контакты:
                 </h4>
                 <div class="footer__telephone__wrapper">
-                    <img src="assets/icons/Vector.png" alt="" class="telephone-icon">
+                    <img src="/assets/icons/Vector.png" alt="" class="telephone-icon">
                     <h5 class="footer__telephone">
                         8 (710) 276 8410
                     </h5>
                 </div>
                 <div class="footer__telephone__wrapper">
-                    <img src="assets/icons/Vector.png" alt="" class="telephone-icon">
+                    <img src="/assets/icons/Vector.png" alt="" class="telephone-icon">
                     <h5 class="footer__telephone">
                         8 (710) 276 8410
                     </h5>
                 </div>
                 <div class="footer__telephone__wrapper">
-                    <img src="assets/icons/Vector.png" alt="" class="telephone-icon">
+                    <img src="/assets/icons/Vector.png" alt="" class="telephone-icon">
                     <h5 class="footer__telephone">
                         8 (710) 276 8410
                     </h5>
@@ -117,6 +126,6 @@
             </form>
         </div>
     </div>
-    <script src="assets/scripts/script.js"></script>
+    <script src="/assets/scripts/script.js"></script>
 </body>
 </html>
