--- a/assets/connect/header.html
+++ b/assets/connect/header.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/assets/styles/main.css">
-    <link rel="stylesheet" href="/assets/styles/animations.css">
-    <script async src="/assets/scripts/animations.js" ></script>
+    <title>Ulytau education</title>
+    <link rel="stylesheet" href="assets/styles/main.css">
+    <link rel="stylesheet" href="assets/styles/animations.css">
+    <link rel="icon" href="/assets/icons/8e98f0dd5a3a1bcda97f2d0088d72c7560f60010.png" type="image/x-icon">
+    <script async src="./assets/scripts/animations.js" ></script>
 </head>
 <body>
     <header class="header">
         <div class="header__wrapper">
-            <img src="/assets/icons/8e98f0dd5a3a1bcda97f2d0088d72c7560f60010.png" alt="" class="icon-ulytau">
+            <img src="assets/icons/8e98f0dd5a3a1bcda97f2d0088d72c7560f60010.png" alt="" class="icon-ulytau">
         <ul class="header-list">
             <li class="header-list__element">
                 <a href="/index.php" class="header-list__link">
@@ -34,7 +35,7 @@
                 </a>
             </li>
             <li class="header-list__element">
-                <a href="" class="header-list__link">
+                <a href="/interests.php" class="header-list__link">
                     Интересы студентов
                 </a>
             </li>
